--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tw-js-webpack-utils",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A set of scripts to facilitate development and bundling of ReactJS apps with Webpack.",
   "main": "bin/webpack-config.js",
   "scripts": {
@@ -19,6 +19,15 @@
     "url": "https://github.com/TruewindIT/tw-js-webpack-utils/issues"
   },
   "homepage": "https://github.com/TruewindIT/tw-js-webpack-utils#readme",
+  "dependencies": {
+    "copy-webpack-plugin": "4.5.1",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.4.0",
+    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "webpack": "4.8.3",
+    "webpack-dev-server": "3.1.4"
+  },
   "devDependencies": {
     "babel-eslint": "8.2.6",
     "eslint": "5.2.0",
