--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tw-js-webpack-utils",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A set of scripts to facilitate development and bundling of ReactJS apps with Webpack.",
   "main": "bin/webpack-config.js",
   "scripts": {
@@ -20,12 +20,23 @@
   },
   "homepage": "https://github.com/TruewindIT/tw-js-webpack-utils#readme",
   "dependencies": {
+    "css-loader": "0.28.11",
     "copy-webpack-plugin": "4.5.1",
+    "eslint-loader": "2.0.0",
+    "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.0",
     "optimize-css-assets-webpack-plugin": "4.0.1",
+    "postcss-loader": "2.1.5",
+    "postcss-scss": "1.0.5",
+    "precss": "3.1.2",
+    "resolve-url-loader": "2.3.0",
+    "stats-webpack-plugin": "0.6.2",
+    "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "0.6.2",
     "webpack": "4.8.3",
+    "webpack-cli": "2.1.3",
     "webpack-dev-server": "3.1.4"
   },
   "devDependencies": {
