--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tw-js-webpack-utils",
-  "version": "1.1.5",
+  "version": "2.0.1-alpha.12",
   "description": "A set of scripts to facilitate development and bundling of ReactJS apps with Webpack.",
   "main": "bin/webpack-config.js",
   "scripts": {
@@ -20,24 +20,38 @@
   },
   "homepage": "https://github.com/TruewindIT/tw-js-webpack-utils#readme",
   "dependencies": {
-    "css-loader": "0.28.11",
-    "copy-webpack-plugin": "4.5.1",
-    "eslint-loader": "2.0.0",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-decorators": "7.0.0",
+    "@babel/plugin-transform-object-assign": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-eslint": "9.0.0-beta.3",
+    "babel-loader": "8.0.0-beta.4",
+    "copy-webpack-plugin": "4.5.2",
+    "css-loader": "1.0.0",    
+    "eslint": "5.5.0",
+    "eslint-loader": "2.1.0",
+    "eslint-plugin-react": "7.11.1",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.4.0",
-    "optimize-css-assets-webpack-plugin": "4.0.1",
-    "postcss-loader": "2.1.5",
-    "postcss-scss": "1.0.5",
+    "mini-css-extract-plugin": "0.4.1",
+    "optimize-css-assets-webpack-plugin": "5.0.0",
+    "postcss-loader": "3.0.0",
+    "postcss-scss": "2.0.0",
     "precss": "3.1.2",
     "resolve-url-loader": "2.3.0",
     "stats-webpack-plugin": "0.6.2",
-    "style-loader": "0.21.0",
-    "uglifyjs-webpack-plugin": "1.2.5",
-    "url-loader": "0.6.2",
-    "webpack": "4.8.3",
-    "webpack-cli": "2.1.3",
-    "webpack-dev-server": "3.1.4"
+    "style-loader": "0.22.1",
+    "uglifyjs-webpack-plugin": "1.2.7",
+    "url-loader": "1.0.1",
+    "webpack": "4.16.5",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.5"
   },
   "devDependencies": {
     "babel-eslint": "8.2.6",
