--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tw-js-webpack-utils",
-  "version": "2.0.1-alpha.12",
+  "version": "2.0.1-alpha.13",
   "description": "A set of scripts to facilitate development and bundling of ReactJS apps with Webpack.",
   "main": "bin/webpack-config.js",
   "scripts": {
@@ -30,8 +30,8 @@
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
-    "babel-eslint": "9.0.0-beta.3",
-    "babel-loader": "8.0.0-beta.4",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "8.0.2",
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "1.0.0",    
     "eslint": "5.5.0",
