--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "css-loader": "0.28.11",
     "copy-webpack-plugin": "4.5.1",
+    "del": "3.0.0",
     "eslint-loader": "2.0.0",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.0",
+    "minimist": "1.2.0",
     "optimize-css-assets-webpack-plugin": "4.0.1",
     "postcss-loader": "2.1.5",
     "postcss-scss": "1.0.5",
