--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@babel/preset-typescript": "7.0.0",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.2",
-    "css-loader": "1.0.0",
     "copy-webpack-plugin": "4.5.2",
-    "del": "3.0.0",    
+    "css-loader": "1.0.0",
+    "del": "3.0.0",
     "file-loader": "1.1.11",
-    "fork-ts-checker-webpack-plugin" : "0.4.8",
+    "fork-ts-checker-webpack-plugin": "0.4.8",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.1",
     "minimist": "1.2.0",
@@ -57,7 +57,7 @@
     "typescript": "3.0.1",
     "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
-    "webpack": "4.16.5",
+    "webpack": "^4.41.6",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.14"
   },
